--- a/Desktop/portfolio-examen-front/Styles/navBar.css
+++ b/Desktop/portfolio-examen-front/Styles/navBar.css
@@ -63,6 +63,7 @@ align-items: center;  }
     background: linear-gradient(90deg, #FF6B6B, #8B0000);
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
+    background-clip: text;
   }
   
   .navbar__link-underline {
