--- a/Desktop/portfolio-examen-front/Styles/Contact.css
+++ b/Desktop/portfolio-examen-front/Styles/Contact.css
@@ -3,6 +3,7 @@
     color: white;
     font-family: Arial, sans-serif;
     padding: 20px;
+    
   }
   
   .contact-content {
@@ -11,11 +12,11 @@
   }
   
   h2 {
-    font-size: 2.5rem;
+    font-size: 2rem;
     color: white;
   }
   
-  h2::after{
+  .contact-h2::after{
     content: "";
     display: block;
     width: 10%;
@@ -29,7 +30,7 @@
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
     background-clip: text;
-    font-size: 1.8rem;
+    font-size: 1.5rem;
   }
   
   .buttons {
@@ -38,6 +39,7 @@
     align-items: center;
     gap: 5vw;
     margin-top: 20px;
+    position: relative;
   }
   
   .button {
@@ -74,6 +76,7 @@
     display: inline-block;
     text-align: left;
     width: 400px;
+    position: relative;
   }
   
   .form-title {
