--- a/Desktop/portfolio-examen-front/Styles/HomePage.css
+++ b/Desktop/portfolio-examen-front/Styles/HomePage.css
@@ -1,3 +1,5 @@
+
+
 :root {
     --primary-color: #FF6B6B;
     --secondary-color: #8B0000;
@@ -18,7 +20,6 @@
     display: flex;
     flex-direction: column;
     min-height: 100vh;
-    position: relative;
     z-index: 1;
     padding-left: 121px;
   }
@@ -72,6 +73,7 @@
   margin-top: 2rem;
   font-weight: 500;
   font-size: 1.2rem;
+  position: relative;
   }
   
   .homepage__button:hover {
@@ -83,6 +85,21 @@
     transform: translateY(-1px);
     box-shadow: 0 5px 10px rgba(0, 0, 0, 0.2);
   }
+
+  .avatar-container {
+    position: relative;  /* S'assure qu'il reste en place même au scroll */
+    width: 50vw;     /* Pleine largeur */
+    height: 50vh;    /* Pleine hauteur */
+    z-index: 1;    /* Pour être en premier plan */
+      background-color: transparent; 
+  }
+
+  canvas {
+    clip-path: inset(0 0 60px 0); /* coupe 100px du bas */
+    width: 100vw;
+    height: 100vh;
+  }
+  
   
   @media (max-width: 768px) {
     .homepage {
