--- a/Desktop/portfolio-examen-front/Styles/Projets.css
+++ b/Desktop/portfolio-examen-front/Styles/Projets.css
@@ -8,9 +8,18 @@
   /* Headings */
   .projects-title {
     color: #FFFFFF;
-    font-size: 2.5rem;
+    font-size: 2rem;
     text-align: center;
     margin-bottom: 0.5rem;
+  }
+
+  .projects-title::after {
+    content: "";
+    display: block;
+    width: 10%;
+    height: 1px;
+    background-color: white;
+    margin: 1rem auto 0;
   }
   
   .portfolio-subtitle {
@@ -18,7 +27,7 @@
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
     background-clip: text;
-    font-size: 2rem;
+    font-size: 1.5rem;
     text-align: center;
     margin-bottom: 3rem;
   }
@@ -26,7 +35,7 @@
   /* Projects grid */
   .projects-grid {
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+    grid-template-columns: repeat(auto-fit, minmax(200px, 3fr));
     gap: 2rem;
     max-width: 1200px;
     margin: 0 auto;
