--- a/Desktop/portfolio-examen-front/Styles/aPropos.css
+++ b/Desktop/portfolio-examen-front/Styles/aPropos.css
@@ -62,6 +62,7 @@
   border-radius: 8px;
   margin-top: 3vh;
   position: relative;
+  box-shadow: 5px 5px 10px #111, -5px -5px 10px #333;
 }
 
 .about__text-container {
@@ -89,7 +90,7 @@
   padding: 0.5rem;
   border-radius: 8px;
   text-align: center;
-  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+  box-shadow: 5px 5px 10px #111, -5px -5px 10px #333;
   width: 10rem;
 }
 
@@ -159,7 +160,8 @@
   .quality-cards {
     flex-wrap: wrap;
     justify-content: auto;
-    padding-left: 25vw;
+    padding-left: 10vw;
+    margin-bottom: 5vh;
   }
 
   .quality-card {
